omweather-gismeteo-ru-stations-db (0.5) unstable; urgency=low

  * Fixed small memory leak
  * Fixed possibility of segmentation fault

 --  Vlad Vasiliev <vlad@gas.by>  Mon, 22 Feb 2010 16:53:20 +0200

omweather-gismeteo-ru-stations-db (0.4) unstable; urgency=low

  * Optified 
  * Changed section in control file
  * Changed in moon phase
  * Added Xsbc-Bugtracker in control file

 --  Vlad Vasiliev <vlad@gas.by>  Mon, 22 Feb 2010 16:53:20 +0200

omweather-gismeteo-ru-stations-db (0.3) unstable; urgency=low

  * Minor fixes 

 --  Vlad Vasiliev <vlad@gas.by>  Wed, 10 Feb 2010 08:33:20 +0200

omweather-gismeteo-ru-stations-db (0.2) unstable; urgency=low

  * Fixed bug #5995 "United States should be United States of America"

 --  Vlad Vasiliev <vlad@gas.by>  Mon, 20 Nov 2009 09:53:20 +0200

omweather-gismeteo-ru-stations-db (0.1) unstable; urgency=low

  * Initial release.

 --  Vlad Vasiliev <vlad@gas.by>  Mon, 17 Aug 2009 19:53:20 +0200